HP-3: Updating the repo with pseudo selectors

--- a/view.html
+++ b/view.html
@@ -4,15 +4,22 @@
 
 <style>
 
-li.red + li {
+/* li.red + li */
+/* li:hover */
+/* li: :focus */
+/* input:checked */
+/* li:nth-child(3) */
+[data-red^= "tr"]
+ {
 
 background: red;
 }
 </style> 
 </head> 
 <body>
-
-<div class="red">This is a div</div> 
+<!-- <input type="text"> -->
+<input type="checkbox">
+<div data-red="true">This is a div</div> 
     <span id="blue"> This is a span</span> 
     <div>
 <span>
